// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RadioConditionalInput should hide the radio button heading when the fieldset has a hidden flag set 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group "
    id="conditional-form-group"
  >
    <fieldset
      aria-describedby="define-passenger-age-range"
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--m"
      >
        <h2
          class="govuk-fieldset__heading govuk-visually-hidden"
          id="define-passenger-age-range"
        >
          Does the passenger type have an age range?
        </h2>
      </legend>
      <div
        class=""
      >
        <div
          class="govuk-radios govuk-radios--conditional"
          data-module="govuk-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="age-range-required"
              name="ageRange"
              type="radio"
              value="Yes"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="age-range-required"
            >
              Yes
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="age-range-not-required"
              name="ageRange"
              type="radio"
              value="No"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="age-range-not-required"
            >
              No
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <br />
    <br />
  </div>
</DocumentFragment>
`;

exports[`RadioConditionalInput should render a set of radio buttons with conditional inputs when given a fieldset referencing inputs 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group "
    id="conditional-form-group"
  >
    <fieldset
      aria-describedby="define-passenger-age-range"
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--m"
      >
        <h2
          class="govuk-fieldset__heading"
          id="define-passenger-age-range"
        >
          Does the passenger type have an age range?
        </h2>
      </legend>
      <div
        class=""
      >
        <div
          class="govuk-radios govuk-radios--conditional"
          data-module="govuk-radios"
        >
          <div>
            <div
              class="govuk-radios__item"
            >
              <input
                class="govuk-radios__input"
                data-aria-controls="age-range-required-conditional"
                id="age-range-required"
                name="ageRange"
                type="radio"
                value="Yes"
              />
              <label
                class="govuk-label govuk-radios__label"
                for="age-range-required"
              >
                Yes
              </label>
            </div>
            <div
              class="govuk-radios__conditional govuk-radios__conditional--hidden"
              id="age-range-required-conditional"
            >
              <fieldset
                aria-describedby="define-passenger-hint"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                  id="define-passenger-hint"
                >
                  Enter a minimum age for this passenger type.
                </legend>
                <div
                  class="govuk-form-group"
                >
                  <label
                    class="govuk-label"
                    for="age-range-min"
                  >
                    Minimum age (if applicable)
                  </label>
                  <div
                    class=""
                  >
                    <input
                      class="govuk-input govuk-!-width-one-third"
                      id="age-range-min"
                      name="ageRangeMin"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="age-range-not-required"
              name="ageRange"
              type="radio"
              value="No"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="age-range-not-required"
            >
              No
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <br />
    <br />
  </div>
</DocumentFragment>
`;

exports[`RadioConditionalInput should render an ordinary set of radio buttons when given a base fieldset 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group "
    id="conditional-form-group"
  >
    <fieldset
      aria-describedby="define-passenger-age-range"
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--m"
      >
        <h2
          class="govuk-fieldset__heading"
          id="define-passenger-age-range"
        >
          Does the passenger type have an age range?
        </h2>
      </legend>
      <div
        class=""
      >
        <div
          class="govuk-radios govuk-radios--conditional"
          data-module="govuk-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="age-range-required"
              name="ageRange"
              type="radio"
              value="Yes"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="age-range-required"
            >
              Yes
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="age-range-not-required"
              name="ageRange"
              type="radio"
              value="No"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="age-range-not-required"
            >
              No
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <br />
    <br />
  </div>
</DocumentFragment>
`;
